<resources>
    <string name="app_name">MyToDoList</string>
    <string name="action_settings">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="delete">Delete</string>
    <string name="about">About...</string>
    <string name="search">Search</string>
    <string name="checkedOnly">Checked items only</string>
    <string name="checkedTask">Checked tasks only</string>
    <string name="checkedGrocery">Checked groceries</string>
    <string name="checked">Checked</string>
    <string name="markDone">Done</string>
    <string name="filterByType">Filter by type</string>
    <string name="hintSearchTask">Enter the text  you want to search...</string>
    <string name="cancel">Cancel</string>
    <string name="searchTask">Search Task</string>
    <string name="searchExplanation">"Please type the text you are looking for:"</string>
    <string name="hingSearchGrocery">Enter the grocery you want to search...</string>
    <string name="searchGrocery">Search Grocery</string>
    <string name="groceries">Groceries</string>
    <string name="all">All</string>
    <string name="groceryTag">Grocery:</string>
    <string name="groceryHint">Enter the grocery name...</string>
    <string name="categoryTag">Category:</string>
    <string name="priorityTag">Priority:</string>
    <string name="isApppointment">Is this an appointment?</string>
    <string name="dateTag">Date:</string>
    <string name="hourTag">Hour:</string>
    <string name="notesTag">Notes:</string>
    <string name="notesHint">Add some notes about your task...</string>
    <string name="groceryTypeTag">Grocery type:</string>
    <string name="taskDescHint">Enter the task description...</string>
    <string name="spCategoryHint">Select the task category...</string>
    <string name="spGrocTypeHint">Select the grocer y type...</string>
    <string name="save">Save</string>
    <string name="groceryAdded">The new grocery has been successfully added to your grocery list</string>
    <string name="taskAdded">The new task has been successfully added to your task list</string>
    <string name="groceryAddedFailed">The new grocery was not included in the grocery list. Please, Try again.</string>
    <string name="taskAddedFailed">The new task was not included in the grocery list. Please, Try again.</string>
    <string name="groceryNameEmpty">The grocery name is blank. Please, type a name in.</string>
    <string name="taskDesEmpty">The task descrption is blank. Please, type a description in.</string>
    <string name="deleteGroceryTitle">Delete Groceries</string>
    <string name="deleteGrocery">Are you sure you want to delete </string>
    <string name="deleteGrocery1"> selected grocery(ies)?</string>
    <string name="deleteTaskTitle">Delete Task</string>
    <string name="addDelTaskList">Add or Delete a task list...</string>
    <string name="addTaskList">Add a new task list</string>
    <string name="delTaskList">Delete existing task list</string>
    <string name="addTaskListExp">Please type the name of the new list:</string>
    <string name="listNameEmpty">List name cannot be left blank.</string>
    <string name="listNameTooLong">List name too long. Please select a shorter name.</string>
    <string name="listNameDuplicate">The new List name is already in use.</string>
    <string name="addListSuccess">The new task list has been added.</string>
    <string name="addListFail">The new task list has not been added.</string>
    <string name="deleteTaskList">Delete Task Lists.</string>
    <string name="archive">Archive</string>
    <string name="archived">Archived</string>
    <string name="archiveTaskTitle">Archive tasks</string>
    <string name="wantToDeleteList">Are you sure you want to delete the following Task List</string>
    <string name="noTaskListSelected">Error, no task list selected</string>
    <string name="noTaskListAvailable">Error,No task available for deletion</string>
    <string name="noTaskToHighlight">No task selected to be highlighted.</string>
    <string name="setUserName">Set user name</string>
    <string name="inputUserName">Please enter your name:</string>
    <string name="unableUpdateUserName">Something went wrong!!! Unable to update the user name.</string>
    <string name="blankUserName">The user name cannot be left in blank. Please, type a name in the input field.</string>
    <string name="setUserMsg">Set user message</string>
    <string name="inputUserMsg">Please enter your message:</string>
    <string name="unableUpdateUserMsg">Something went wrong!!! Unable to update the user message.</string>
    <string name="blankUserMsg">The user message cannot be left in blank. Please, type a message in the input field.</string>
    <string name="setUserImg">Select an option to load a profile picture:</string>
    <string name="cameraPermit">Without this permit the app will not be able to take pictures with the camera.</string>
    <string name="storagePermit">Without this permit the app will not be able to load pictures  from your selected gallery.</string>
    <string name="generalPermitRqst">Permit request</string>
    <string name="errCamera">Error while capturing the photo.</string>
    <string name="noChangeGrocery">No changes recorded. The grocery is the same as before.</string>
    <string name="updateGrocFailed">Error: Failed to update the grocery.</string>
    <string name="noChangeTask">No changes recorded. The task is the same as before.</string>
    <string name="updateTaskFailed">Error: Failed to update the task.</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="deleteGroceries">Are you sure you want to delete the following groceries?: </string>
    <string name="delete1Grocery">Are you sure you want to delete the following grocery: </string>
    <string name="noGroceryDeleted">No task is selected to be deleted.</string>
    <string name="deleteTasks">Are you sure you want to delete the following tasks?: </string>
    <string name="delete1Task">Are you sure you want to delete the following task: </string>
    <string name="noTaskDeleted">No task is selected to be deleted.</string>
    <string name="archiveTasks">Are you sure you want to archive the following tasks?: </string>
    <string name="archive1Task">Are you sure you want to archive the following task: </string>
    <string name="noTaskArchived">No task is selected to be archived.</string>
    <string name="successGrocery">The new grocery has been successfully added to your grocery list.</string>
    <string name="successTask">The new task has been successfully added to your task list.</string>
    <string name="successUpdateGrocery">The grocery was successfully updated.</string>
    <string name="successUpdateTask">The task was successfully updated.</string>
    <string name="appThemeSelection">App colour theme</string>
    <string name="appThemeDescription">Select the colour combination for your app.</string>
    <string name="ok">OK</string>
    <string name="dateFormatSelection">Date format to be displayed</string>
    <string name="dateFormatDescription">Select the date format for your app.</string>
    <string name="appStyles">App Appearance</string>
    <string name="english">English</string>
    <string name="spanish">Spanish</string>
    <string name="changeLang">Language</string>
    <string name="changeLangDescription">Change the app language.</string>
    <string name="aboutTitle">All about MyToDoList:</string>
    <string name="aboutMain">Main Screen</string>
    <string name="aboutNav">nav menu</string>
    <string name="aboutAdd">Add and Edit</string>
    <string name="aboutMainExp">Here you will find a description for each menu item in the Main screen:</string>
    <string name="listIconDescrp">This icon will retrieve all items in the current list.</string>
    <string name="checkBoxDescrp">This checkbox will filter only the checked items in the current list.</string>
    <string name="highlighterDescrp">The highligter icon will mark a selected task(s) as done by highlighting them.</string>
    <string name="filterDescrp">The filter by type icon will display only the groceries whithin the grocery types selected in the filter.</string>
    <string name="searchDescrp">The search icon allows you to search for some text contained in the task or grocery description.</string>
    <string name="deleteDescrp">The delete icon erease selected tasks from the current list, including the Archived list.</string>
    <string name="archiveDescrp">The archive icon will send the selected task to the Archived list and remove it from the current list.</string>
    <string name="settingDescrp">The settings icon opens a new window to configure some app preferences such as app color theme, date format and language.</string>
    <string name="aboutAddDescrp">Here you will find a description for each menu item in the Add and Edit task screen:</string>
    <string name="aboutTaskDescrp">In this text field you can input a descrioption of a task or name for a grocery.</string>
    <string name="aboutCatDescrp">This is a dropdown menu that will display all the task categories or grocery types available in the app.</string>
    <string name="priorityDescrp">This is a dropdown menu that will display all the task priorities available in the app.</string>
    <string name="checkBoxIsAppDescrp">Is Appointment?: This checkbox will show or hide date and hour fields to specify when the task is due.</string>
    <string name="dateDescrip">This icon will display a calendar on your screen so a date for fulfilling the task is picked out.</string>
    <string name="hourDescrp">This icon will display a clock on your screen so a time for fulfilling the task is pikecd out.</string>
    <string name="notesDescrp">This text field allows you to input some extra details about your task.</string>
    <string name="saveDescrp">The Save menu icon allows you to save a new task or save changes on an existing task.</string>
    <string name="cancelDescrp">The Cancel menu icon allows you to discard a new item that has not been created yet or to discard changes on an existing one.</string>
    <string name="aboutNavDescrp">Here you will find a description for each menu item in the Navigation menu:</string>
    <string name="hamburgerMenu">The Menu Icon on the top left corner of the main screen will give you access to the navigation menu.</string>
    <string name="allListDescrp">The All list icon will display all the taks in the app (including all categories but the Grocery category).</string>
    <string name="groceryListDescrp">The Grocery list icon will display all the groceries in the app (some filter may apply).</string>
    <string name="otherListDescrp">The Generic task list is assign to any other list that can be added or removed from the app. This will display the tasks for this category.</string>
    <string name="archiveListDescrp">The Archived list icon will display all the archived tasks in the app.</string>
    <string name="addListDescrp">The Add list icon will allow you to add new task lists (Task Category).</string>
    <string name="remListDescrp">The Delete list icon will allow you to remoce an existing task lists (Task Category), except the All, Groceries and Archived lists.</string>
</resources>
