<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="preferences_main">
    <PreferenceCategory
        android:key="appAppearance"
        android:title="@string/appStyles">
        <ListPreference
            android:key="appTheme"
            android:title="@string/appThemeSelection"
            android:summary="@string/appThemeDescription"
            android:entries="@array/appTheme"
            android:entryValues="@array/appThemeValues"
            android:defaultValue="0"/>
        <ListPreference
            android:key="dateFormat"
            android:title="@string/dateFormatSelection"
            android:summary="@string/dateFormatDescription"
            android:entries="@array/dateFormats"
            android:entryValues="@array/dateFormatsValues"
            android:defaultValue="0"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:key="language"
        android:title="@string/changeLang">
        <ListPreference
            android:key="languages"
            android:title="@string/changeLang"
            android:summary="@string/changeLangDescription"
            android:entries="@array/languages"
            android:entryValues="@array/languagesValues"
            android:defaultValue="0"/>
    </PreferenceCategory>

</PreferenceScreen>