<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/categoryListMenu"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_all"
            android:icon="@drawable/all_icon"
            android:title="@string/all"
            android:orderInCategory="100"/>
        <item
            android:id="@+id/nav_grocery"
            android:icon="@drawable/groceries_icon"
            android:title="@string/groceries"
            android:orderInCategory="150"/>
        <item
            android:id="@+id/nav_archive"
            android:icon="@drawable/archive_icon"
            android:title="@string/archive"
            android:orderInCategory="1999"/>
    </group>

    <group
        android:id="@+id/addTaskListMenu"
        android:checkableBehavior="single"
        android:orderInCategory="2000">
        <item android:title="@string/addDelTaskList">
            <menu>
                <item
                    android:id="@+id/nav_addList"
                    android:icon="@android:drawable/ic_menu_add"
                    android:title="@string/addTaskList" />
                <item
                    android:id="@+id/nav_deleteList"
                    android:icon="@android:drawable/ic_menu_delete"
                    android:title="@string/delTaskList" />
            </menu>
        </item>
    </group>
</menu>
