<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="io.github.jlrods.mytodolist.MainActivity">

    <item
        android:id="@+id/search"
        android:title="@string/search"
        android:icon="@android:drawable/ic_menu_search"
        android:orderInCategory="100"
        app:showAsAction="always"/>
    <item
        android:id="@+id/delete"
        android:title="@string/delete"
        android:icon="@android:drawable/ic_menu_delete"
        android:orderInCategory="200"
        app:showAsAction="always"/>
    <item
        android:id="@+id/archive"
        android:icon="@android:drawable/ic_menu_set_as"
        android:orderInCategory="200"
        android:title="@string/archiveTaskTitle"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/about"
        android:orderInCategory="300"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/about"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/action_settings"
        app:showAsAction="never" />


</menu>
